// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FormComboboxLoadableValues rendering tests init values - test 1`] = `
<div>
  <div
    class="grid gap-2"
    data-slot="form-item"
    data-testid="categories"
  >
    <label
      class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
      data-error="false"
      data-slot="form-label"
      for="_r_1_-form-item"
    >
      Kategorien
    </label>
    <div
      class="flex flex-wrap gap-2"
      data-testid="current-values"
    >
      <div
        class="flex items-center gap-2 rounded-full bg-slate-100 px-3 py-1"
      >
        <span
          class="text-sm"
        >
          Marketing
        </span>
        <button
          class="cursor-pointer text-slate-500 hover:text-slate-700"
          data-testid="remove-value-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      data-slot="popover"
      data-testid="mock-react-popover-root"
    >
      <button
        class="inline-flex items-center gap-2 whitespace-nowrap rounded-md text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full justify-start font-normal"
        data-slot="popover-trigger"
        data-testid="combobox-trigger"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        Kategorie hinzufügen
      </button>
      <div
        data-testid="mock-react-popover-portal"
      />
    </div>
  </div>
</div>
`;

exports[`FormComboboxLoadableValues rendering tests init values undefined - test 1`] = `
<div>
  <div
    class="grid gap-2"
    data-slot="form-item"
    data-testid="categories"
  >
    <label
      class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
      data-error="false"
      data-slot="form-label"
      for="_r_0_-form-item"
    >
      Kategorien
    </label>
    <div
      data-slot="popover"
      data-testid="mock-react-popover-root"
    >
      <button
        class="inline-flex items-center gap-2 whitespace-nowrap rounded-md text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full justify-start font-normal"
        data-slot="popover-trigger"
        data-testid="combobox-trigger"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        Kategorie hinzufügen
      </button>
      <div
        data-testid="mock-react-popover-portal"
      />
    </div>
  </div>
</div>
`;
